--- a/Manual/index.html
+++ b/Manual/index.html
@@ -34,6 +34,10 @@
 			#text{
 				margin-left:200px;
 			}
+			
+			#body{
+				width: 800px;
+			}
 		
 		</style>
 		
@@ -59,6 +63,18 @@
 			<p> A land of opportunity where anything can happen <p>
 			<p> From Rags to riches </p>
 			<p> You decide your own fate </p>
+		<div id = "body">	
+			<p>
+			Valentior is a text based adventure game written in Java. It was developed by Tom Warren. It is still being developed.
+			It is meant to be an in depth game, with rich features, many dialog options, many outcomes and is continually testing the player
+			The world of valentior is a fantasy / medievil game. It features turn based combat with the ability to choose armour sets
+			and weapons. You may also choose from a wide variety of weapons and spells. There are 3 Classes; Mage, Warrior and Rougue.
+			We will touch more on these later on. Finally, every decision matters in valentior, steal in a town and get caught? now the people
+			dont like you... Want to make ammends, help somebody in need and the population will react better towards your presence.
+			Overall the game is whatever you make it, so make it a good one. Currently there is no save feature, I am working on that
+			as i know that it is a very important aspect to any games.
+		</div>	
+			</p>
 		</div>
 	</body>
 	
